# Celestia

./: .appveyor.yml  .cirrus.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CelestiaKeyAssignments.txt  Celestia_QT.sln  Celestia_QT.vcxproj  Celestia_QT.vcxproj.filters  ChangeLog  Dockerfile  INSTALL  INSTALL.md  Info.plist.in  KbdMouseJoyControls.txt  Makefile.am  Makefile.in  README  README.md  TODO  TRANSLATORS  acconfig.h  acinclude.m4  aclocal.m4  appveyor.yml  azure-pipelines.yml  celestia.cfg  celestia.cfg.in  celestia.iss  celestia.mak  celestia.pro  celestia.sln  celestia.vcproj  celestia.vcxproj  celestia.vcxproj.filters  (+19 more)
admin/: Doxyfile.am  Doxyfile.global  Makefile.am  acinclude.m4.in  am_edit  cvs.sh  debianrules  detect-autoconf.sh  libtool.m4.in  mkinstalldirs
data/: CMakeLists.txt  Makefile.am  asteroids.ssc  cassini-cruise.xyzv  cassini-orbit.xyzv  charm2.stc  comets.ssc  deepsky.dsc  dwarfplanets.ssc  extrasolar.ssc  extrasolar.stc  globulars.dsc  huygens.xyz  ida_locs.ssc  itokawa_locs.ssc  jupitermoons_locs.ssc  mars_locs.ssc  merc_locs.ssc  minormoons.ssc  moon_locs.ssc  nearstars.stc  neptunemoons_locs.ssc  numberedmoons.ssc  openclusters.dsc  outersys.ssc  revised.stc  ring_locs.ssc  saturnmoons_locs.ssc  solarsys.ssc  solsys_locs.ssc  spacecraft.ssc  spectbins.stc  venus_locs.ssc  visualbins.stc  world-capitals.ssc
data/locations/: Makefile.am  earth_locs.ssc  mars_locs.ssc  merc_locs.ssc  moon_locs.ssc  ring_locs.ssc  saturnmoons_locs.ssc  uranusmoons_locs.ssc  venus_locs.ssc
data/solar-system/: Makefile.am
data/spacecraft/: Makefile.am
extras-standard/cassini/: CMakeLists.txt
extras-standard/iss/: CMakeLists.txt  Makefile.am  iss.ssc
po/: CMakeLists.txt  LINGUAS  Makefile  Makevars  POTFILES.in  Rules-data  Rules-kde  Rules-qt  Rules-qt.mak  Rules-win-resource  Rules-win-resource.mak  ar.po  be.po  bg.po  celestia.pot  celtranslate.py  de.po  el.po  en.po  es.po  extract_resource_strings.pl  extractrc.pl  fr.po  gl.po  hu.po  it.po  ja.po  ka.po  ko.po  lt.po  lv.po  nb.po  nl.po  nn.po  no.po  pl.po  pt.po  pt_BR.po  pt_br.po  ro.po  (+11 more)
po/po_utils/: extract.py  merge.py  rcfile.py  uifile.py  utilities.py
src/: 3dschunk.h  3dsmesh.cpp  3dsmesh.h  3dsmodel.cpp  3dsmodel.h  3dsread.cpp  3dsread.h  CMakeLists.txt  Ijl.h  Makefile.am  Makefile.in  asterism.cpp  astro.cpp  astro.h  atmosphere.h  bigfix.cpp  body.cpp  body.h  buildstardb.cpp  bytes.h  catalogxref.h  celestia.h  celestia.pro  celestiacore.cpp  celestiacore.h  cmdparser.cpp  cmdparser.h  color.cpp  color.h  command.cpp  command.h  config.cpp  config.h  configfile.cpp  configfile.h  console.cpp  console.h  constellation.cpp  constellation.h  customorbit.cpp  (+104 more)
src/audio3d/: Audio3DBuffer.h  Audio3DContext.h  Audio3DDevice.h  Audio3DError.cpp  Audio3DError.h  Audio3DListener.h  Audio3DManager.cpp  Audio3DManager.h  Audio3DSource.h
src/cel3ds/: 3ds.mak  3dschunk.h  3dsmodel.cpp  3dsmodel.h  3dsread.cpp  3dsread.h  CMakeLists.txt  Makefile.am  Makefile.in  cel3ds.dsp
src/celastro/: CMakeLists.txt  astro.cpp  astro.h  date.cpp  date.h  units.cpp  units.h
src/celcompat/: CMakeLists.txt  bit.h  cc.cpp  cc.h  charconv.h  charconv_impl.cpp  charconv_impl.h  filesystem.h  fs.cpp  fs.h  memory.h  numbers.h  numbers_impl.h  string.h  string_view.h  sv.h  testfs.cc
src/celengine/: 3dsmesh.cpp  3dsmesh.h  CGBuffer.h  CMakeLists.txt  Makefile.am  Makefile.in  asterism.cpp  asterism.h  asterismrenderer.cpp  asterismrenderer.h  astro.cpp  astro.h  astrocat.cpp  astrocat.h  astrodb.cpp  astrodb.h  astroname.cpp  astroname.h  astroobj.cpp  astroobj.h  astrooctree.cpp  astrooctree.h  asyncresourcecache.h  atmosphere.cpp  atmosphere.h  audio.cpp  audio.h  axisarrow.cpp  axisarrow.h  body.cpp  body.h  boundaries.cpp  boundaries.h  boundariesrenderer.cpp  boundariesrenderer.h  catalogxref.cpp  catalogxref.h  category.cpp  category.h  catentry.cpp  (+304 more)
src/celephem/: CMakeLists.txt  Makefile.am  customorbit.cpp  customorbit.gperf  customorbit.h  customorbittype.h  customrotation.cpp  customrotation.gperf  customrotation.h  jpleph.cpp  jpleph.h  nutation.cpp  nutation.h  orbit.cpp  orbit.h  precession.cpp  precession.h  rotation.cpp  rotation.h  sampfile.cpp  sampfile.h  samporbit.cpp  samporbit.h  samporient.cpp  samporient.h  scriptobject.cpp  scriptobject.h  scriptorbit.cpp  scriptorbit.h  scriptrotation.cpp  scriptrotation.h  spiceinterface.cpp  spiceinterface.h  spiceorbit.cpp  spiceorbit.h  spicerotation.cpp  spicerotation.h  vsop87.cpp  vsop87.h  xyzvbinary.h
src/celestia/: AbstractAudioManager.h  CMakeLists.txt  Celestia.dsp  CelestiaCoreApplication.cpp  CelestiaCoreApplication.h  Makefile.am  Makefile.in  ODMenu.cpp  audiosession.cpp  audiosession.h  avicapture.cpp  avicapture.h  catalogloader.cpp  catalogloader.h  celestia.mak  celestiacore.cpp  celestiacore.h  celestiastate.cpp  celestiastate.h  celx.cpp  celx.h  celx_category.cpp  celx_celestia.cpp  celx_celestia.h  celx_frame.cpp  celx_gl.cpp  celx_gl.h  celx_internal.h  celx_lua.cpp  celx_lua.h  celx_misc.cpp  celx_misc.h  celx_name.cpp  celx_name.h  celx_object.cpp  celx_object.h  celx_observer.cpp  celx_observer.h  celx_phase.cpp  celx_phase.h  (+89 more)
src/celfs/: CMakeLists.txt  fs.cpp  fs.h  testfs.cc
src/celimage/: CMakeLists.txt  avif.cpp  bmp.cpp  dds.cpp  dds_decompress.cpp  dds_decompress.h  image.cpp  image.h  imageformats.h  jpeg.cpp  pixelformat.h  png copy.cpp.bak  png.cpp
src/celmath/: CMakeLists.txt  Makefile.am  Makefile.in  aabox.h  capsule.h  celmath.dsp  distance.h  ellipsoid.h  frustum.cpp  frustum.h  geomutil.h  intersect.h  math.mak  mathlib.h  perlin.cpp  perlin.h  plane.h  quaternion.h  randutils.cpp  randutils.h  ray.h  solve.h  sphere.h  vecgl.h  vecmath.h
src/celmodel/: CMakeLists.txt  Makefile.am  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  modelfile.cpp  modelfile.h  tangents.cpp
test/: CMakeLists.txt  astrodb.cpp  astroobj.cpp  crossindex.cpp  doctest_main.cpp  frustum.cpp  greek.cpp  name.cpp  octree.cpp  utf8.cpp
(+2702 files in other folders)
